<resources>
    <string name="app_name" translatable="false">BoBo</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="lorem" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string name="activity_name_favorites">Favorites</string>
    <string name="activity_name_filter">Filter</string>
    <string name="activity_name_inbox">Inbox</string>
    <string name="activity_name_manage_subscriptions">Manage Subscriptions</string>
    <string name="activity_name_my_statements">My Statements</string>
    <string name="activity_name_new_statement">New Statement</string>
    <string name="activity_name_settings">Settings</string>
    <string name="activity_name_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="activity_name_about">About App</string>
    <string name="activity_name_help">Help</string>
    <string name="activity_name_registration">Registration</string>
    <string name="activity_name_statement_details">Details</string>
    <string name="activity_name_edit_statement">Edit</string>
    <string name="activity_name_edit_profile">Edit Profile</string>


    <string name="common_text_email">E-mail</string>
    <string name="common_text_password">Password</string>
    <string name="common_text_log_in">Log in</string>
    <string name="common_text_register">Register</string>
    <string name="common_text_sell">SELL</string>
    <string name="common_text_all">All</string>
    <string name="common_text_select">Select</string>
    <string name="common_text_selling">Selling</string>
    <string name="common_text_renting">Renting</string>
    <string name="common_text_subscribe">Subscribe</string>
    <string name="common_text_unsubscribe">Unsubscribe</string>
    <string name="common_text_unsubscribe_two_line">Un-subscribe</string>
    <string name="common_text_active">Active</string>
    <string name="common_text_archive">Archive</string>
    <string name="common_text_ok">OK</string>
    <string name="common_text_error">Error occurred, please try again</string>

    <string name="button_text_retry">RETRY</string>
    <string name="button_text_cancel">CANCEL</string>
    <string name="button_text_filter">FILTER</string>
    <string name="button_text_add_statement">CREATE</string>

    <string name="read_more_text_view_collapse_text">&#160;Show less</string>
    <string name="read_more_text_view_expand_text">&#160;Show more</string>

    <string name="action_filter">Filter</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_inbox">Inbox</string>
    <string name="action_search">Search</string>

    <string name="nav_title_filter">Filter Statements</string>
    <string name="nav_title_favorites">Favorites</string>
    <string name="nav_title_manage_subscriptions">Manage Subscriptions</string>
    <string name="nav_title_my_statements">My Statements</string>
    <string name="nav_title_inbox">Inbox</string>
    <string name="nav_title_new_statement">Add Statement</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="nav_title_about">About App</string>
    <string name="nav_title_help">Help</string>
    <string name="nav_title_language">ქართული</string>
    <string name="nav_title_authorization">Authorization</string>

    <string name="filter_option_price">Price</string>
    <string name="filter_option_time">Upload Date</string>

    <string name="filter_title_statement_type">Statement type</string>
    <string name="filter_title_sell">Sell</string>
    <string name="filter_title_rent">Rent</string>
    <string name="filter_title_price_from">Price (from)</string>
    <string name="filter_title_price_to">Price (to)</string>
    <string name="filter_title_category">Category</string>
    <string name="filter_title_location">Location</string>
    <string name="filter_title_order">Order by</string>
    <string name="filter_title_show">Show</string>
    <string name="filter_title_list_type">List Type</string>

    <string name="statement_details_title_details">Detailed information</string>
    <string name="statement_details_similars">Similar Statements</string>

    <string name="search_tab_name_statements">Statements</string>
    <string name="search_tab_name_owners">Users</string>

    <string name="register_hint_pass">Password</string>
    <string name="register_hint_pass_second">Re-enter Password</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_last_name">Last Name</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_phone">Phone number</string>
    <string name="register_hint_company">Company name</string>
    <string name="common_text_company">company</string>
    <string name="register_error_duplicate_user">User with this e-mail, already exists</string>
    <string name="error_pass_mail">No user was found by email and password</string>
    <string name="common_text_registration_succesful">Registration completed successfully</string>
    <string name="common_text_avatar">Avatar</string>
    <string name="log_out">Log out</string>
    <string name="common_text_price">Price (₾)</string>
    <string name="statement_name">title</string>
    <string name="statement_desc">description</string>
    <string name="new_password">new password</string>
    <string name="save">save</string>
    <string name="statement_archive_title">Statement status</string>
    <string name="archive_statement">Archive</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_region">select region</string>
    <string name="select_on_map">mark on map</string>
    <string name="login_success">Authorization was successful</string>
    <string name="show_on_map">SHOW ON MAP</string>
    <string name="delete">DELETE</string>
    <string name="operation_succsessful">Operation completed successfuly</string>
    <string name="create_date">Create date</string>
    <string name="statement_deleted">Statement was deleted</string>
    <string name="error_no_category">Please, select category</string>
    <string name="error_no_location">Please select region, where product is</string>
    <string name="error_no_price">Please specify price</string>
    <string name="error_no_title">Please specify title</string>
    <string name="eror_no_description">Please specify description</string>
    <string name="no_image_permission">Camera permission was denied, you can choose image only from gallery</string>
    <string name="sho_on_map">show on map</string>
    <string name="fill_all_values">Please fill all parameters</string>
    <string name="password_mismatch">Passwords are not same</string>
    <string name="error_wrong_email">Please enter correct Email address</string>
    <string name="error_short_password">Minimum password length is 6 symbols</string>
    <string name="image">Image</string>

</resources>
