<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/top">
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_filter"
            android:title="@string/nav_title_filter" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_title_favorites" />
    </group>

    <group android:id="@+id/middle">

        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/ic_check_box"
            android:title="@string/nav_title_manage_subscriptions" />
        <item
            android:id="@+id/nav_my_statements"
            android:icon="@drawable/ic_statements"
            android:title="@string/nav_title_my_statements" />
    <!--    <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_mail"
            android:title="@string/nav_title_inbox" />
            !-->
        <item
            android:id="@+id/nav_new_statement"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/nav_title_new_statement" />
    </group>

    <group android:id="@+id/bottom">

     <!--   <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_title_settings" />
            -->
        <item
            android:id="@+id/nav_terms_and_conditions"
            android:icon="@drawable/ic_terms_and_conditions"
            android:title="@string/nav_title_terms" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_title_about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_title_help" />
    </group>

</menu>
