<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/button_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/item_default_small_margin">

                <Button
                    android:id="@+id/add_statement_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_add_statement"/>

            </LinearLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/button_wrapper"
                android:layout_marginBottom="@dimen/item_default_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/item_default_margin"
                    android:orientation="vertical">


                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none">

                        <LinearLayout
                            android:id="@+id/new_images_wrapper"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />

                    </HorizontalScrollView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/item_default_margin"
                        android:paddingTop="@dimen/item_default_margin">

                        <LinearLayout
                            android:visibility="gone"
                            android:id="@+id/archive_wrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/item_default_margin"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/statement_archive_title"
                                android:textColor="@color/color_black"
                                android:textSize="@dimen/text_size_titles"
                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/archive_check"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/item_default_small_margin"
                                android:text="@string/archive_statement"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/one_dp"
                            android:layout_marginTop="@dimen/item_default_margin"
                            android:background="@color/divider_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/item_default_margin"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/filter_title_statement_type"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/text_size_titles"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/item_default_small_margin"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_sell"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/filter_title_sell"
                                android:textSize="@dimen/text_size_descriptions" />

                            <RadioButton
                                android:id="@+id/radio_rent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/item_default_small_margin"
                                android:text="@string/filter_title_rent"
                                android:textSize="@dimen/text_size_descriptions" />

                        </RadioGroup>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/one_dp"
                            android:layout_marginTop="@dimen/item_default_margin"
                            android:background="@color/divider_color" />

                        <LinearLayout
                            android:id="@+id/category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/item_default_margin"
                            android:paddingTop="@dimen/item_default_margin">


                            <ImageView
                                android:layout_width="@dimen/filter_ic_size"
                                android:layout_height="@dimen/filter_ic_size"
                                android:src="@drawable/ic_blue_category" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/item_default_margin"
                                    android:text="@string/filter_title_category"
                                    android:textColor="@color/color_black"
                                    android:textSize="@dimen/text_size_titles"
                                    android:textStyle="bold" />

                                <HorizontalScrollView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/item_default_margin"
                                    android:scrollbars="none">

                                    <LinearLayout
                                        android:id="@+id/category_values_wrapper"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal" />
                                </HorizontalScrollView>

                            </LinearLayout>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/one_dp"
                            android:background="@color/divider_color" />

                        <LinearLayout
                            android:id="@+id/location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/item_default_margin"
                            android:paddingTop="@dimen/item_default_margin">

                            <ImageView
                                android:layout_width="@dimen/filter_ic_size"
                                android:layout_height="@dimen/filter_ic_size"
                                android:src="@drawable/ic_blue_location" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/item_default_margin"
                                    android:text="@string/filter_title_location"
                                    android:textColor="@color/color_black"
                                    android:textSize="@dimen/text_size_titles"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:id="@+id/single_location_wrapper"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal" />


                                <HorizontalScrollView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/item_default_margin"
                                    android:scrollbars="none">

                                    <LinearLayout
                                        android:id="@+id/location_values_wrapper"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal" />

                                </HorizontalScrollView>


                            </LinearLayout>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/one_dp"
                            android:background="@color/divider_color" />
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/price_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/common_text_price"
                            android:imeOptions="actionNext"
                            android:inputType="numberDecimal"
                            android:maxLength="7"
                            android:maxLines="1"
                            android:textSize="@dimen/text_size_medium" />

                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/one_dp"
                        android:background="@color/divider_color" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edit_text_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/item_default_margin">

                        <EditText
                            android:id="@+id/statement_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/item_default_margin"
                            android:hint="@string/statement_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="100"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <EditText
                        android:id="@+id/statement_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_default_margin"
                        android:layout_marginTop="@dimen/item_default_margin"
                        android:background="@drawable/new_statement_text_area_background"
                        android:gravity="top"
                        android:hint="@string/statement_desc"
                        android:inputType="textMultiLine"
                        android:maxLength="500"
                        android:minLines="6"
                        android:padding="2dp" />

                </LinearLayout>


            </ScrollView>

            <com.bobo.gmargiani.bobo.ui.views.TopShadow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/button_wrapper" />


        </RelativeLayout>

        <FrameLayout
            android:id="@+id/full_retry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_transparent_background"
            android:clickable="true"
            android:visibility="gone">

            <include
                layout="@layout/component_retry_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/full_loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_transparent_background"
            android:clickable="true"
            android:visibility="gone">

            <include
                layout="@layout/component_circular_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

    </FrameLayout>

</LinearLayout>